[package]
name = "tch-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tchpy"
crate-type = ["rlib", "cdylib"]

[dependencies]
tch = { version = "0.6.1", path = ".." }
torch-sys = { version = "0.6.1", path = "../torch-sys" }
lazy_static = "1.4.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }